# openmp_lab2

./: CMakeLists.txt  constants.h  main.c  matrix.c  matrix.h  nonlinear_equation.c  nonlinear_equation.h  prog1
first_type/: build1.sh  constants.h  copile_comands.txt  main.c  matrix.h  nonlinear_equation.c  run1.sh
second_type/: CMakeLists.txt  compile_comands.txt  main.c  main_schedule.c  matrix.c  nonlinear_equation.c  nonlinear_equation.h  nonlinear_equation_schedule.c  run2.sh
